# jsecoin-opencl-miner

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_win.bat
include/: README.txt  sha256.h
include/jseminer/: miner.h  sha256.cl.h  sha256.h  socket.h
src/: main.c  miner.c  sha256.c  sha256.cl  sha256.cl.c.in  socket.c
